Kubernetes/03_ingress/ingress_deploy.yaml
#https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.2.1/deploy/static/provider/cloud/deploy.yaml
---
apiVersion: v1
kind: Namespace 
metadata:
  labels:
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  name: ingress-nginx 
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/version: 1.2.1
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  externalTrafficPolicy: Local
  ports:
  - appProtocol: http
    name: http
    port: 80
    protocol: TCP
    targetPort: http
  - appProtocol: https
    name: https
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  type: LoadBalancer

---

apiVersion: v1
kind: Service
metadata:
  labels:

    app.kubernetes.io/component: controller

    app.kubernetes.io/instance: ingress-nginx

    app.kubernetes.io/name: ingress-nginx

    app.kubernetes.io/part-of: ingress-nginx

    app.kubernetes.io/version: 1.2.1

  name: ingress-nginx-controller-admission

  namespace: ingress-nginx

spec:

  ports:

  - appProtocol: https

    name: https-webhook

    port: 443

    targetPort: webhook

  selector:

    app.kubernetes.io/component: controller

    app.kubernetes.io/instance: ingress-nginx

    app.kubernetes.io/name: ingress-nginx

  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:

    app.kubernetes.io/component: controller

    app.kubernetes.io/instance: ingress-nginx

    app.kubernetes.io/name: ingress-nginx

    app.kubernetes.io/part-of: ingress-nginx

    app.kubernetes.io/version: 1.2.1

  name: ingress-nginx-controller

  namespace: ingress-nginx

spec:
  minReadySeconds: 0
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/name: ingress-nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/component: controller
        app.kubernetes.io/instance: ingress-nginx
        app.kubernetes.io/name: ingress-nginx
    spec:
      containers:
      - args:
        - /nginx-ingress-controller

        - --publish-service=$(POD_NAMESPACE)/ingress-nginx-controller

        - --election-id=ingress-controller-leader

        - --controller-class=k8s.io/ingress-nginx

        - --ingress-class=nginx

        - --configmap=$(POD_NAMESPACE)/ingress-nginx-controller

        - --validating-webhook=:8443

        - --validating-webhook-certificate=/usr/local/certificates/cert

        - --validating-webhook-key=/usr/local/certificates/key

        image: k8s.gcr.io/ingress-nginx/controller:v1.2.1@sha256:5516d103a9c2ecc4f026efbd4b40662ce22dc1f824fb129ed121460aaa5c47f8

        imagePullPolicy: IfNotPresent

        lifecycle:

          preStop:

            exec:

              command:

              - /wait-shutdown

        livenessProbe:

          failureThreshold: 5

          httpGet:

            path: /healthz

            port: 10254

            scheme: HTTP

          initialDelaySeconds: 10

          periodSeconds: 10

          successThreshold: 1

          timeoutSeconds: 1

        name: controller

        ports:

        - containerPort: 80

          name: http

          protocol: TCP

        - containerPort: 443

          name: https

          protocol: TCP

        - containerPort: 8443

          name: webhook

          protocol: TCP

        readinessProbe:

          failureThreshold: 3

          httpGet:

            path: /healthz

            port: 10254

            scheme: HTTP

          initialDelaySeconds: 10

          periodSeconds: 10

          successThreshold: 1

          timeoutSeconds: 1

        resources:

          requests:

            cpu: 100m

            memory: 90Mi

        securityContext:

          allowPrivilegeEscalation: true

          capabilities:

            add:

            - NET_BIND_SERVICE

            drop:

            - ALL

          runAsUser: 101

        volumeMounts:

        - mountPath: /usr/local/certificates/

          name: webhook-cert

          readOnly: true

      dnsPolicy: ClusterFirst

      nodeSelector:

        kubernetes.io/os: linux

      serviceAccountName: ingress-nginx

      terminationGracePeriodSeconds: 300

      volumes:

      - name: webhook-cert

        secret:

          secretName: ingress-nginx-admission

---

apiVersion: networking.k8s.io/v1

kind: IngressClass

metadata:

  labels:

    app.kubernetes.io/component: controller

    app.kubernetes.io/instance: ingress-nginx

    app.kubernetes.io/name: ingress-nginx

    app.kubernetes.io/part-of: ingress-nginx

    app.kubernetes.io/version: 1.2.1

  name: nginx

spec:

  controller: k8s.io/ingress-nginx

---

apiVersion: admissionregistration.k8s.io/v1

kind: ValidatingWebhookConfiguration

metadata:

  labels:

    app.kubernetes.io/component: admission-webhook

    app.kubernetes.io/instance: ingress-nginx

    app.kubernetes.io/name: ingress-nginx

    app.kubernetes.io/part-of: ingress-nginx

    app.kubernetes.io/version: 1.2.1

  name: ingress-nginx-admission

webhooks:

- admissionReviewVersions:

  - v1

  clientConfig:

    service:

      name: ingress-nginx-controller-admission

      namespace: ingress-nginx

      path: /networking/v1/ingresses

  failurePolicy: Fail

  matchPolicy: Equivalent

  name: validate.nginx.ingress.kubernetes.io

  rules:

  - apiGroups:

    - networking.k8s.io

    apiVersions:

    - v1

    operations:

    - CREATE

    - UPDATE

    resources:

    - ingresses

  sideEffects: None
